--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '2.1-11.1' %}
+{% set version = '2.2-2' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -7,16 +7,15 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: fpc_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/fpc_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/fpc/fpc_{{ version }}.tar.gz
-  sha256: ccfe4c5acb8b7c313b7c07076b994900b09f1d13459a0ca7815de337e12931ab
+  sha256: b6907019eb161d5c8c814cf02a4663cc8aae6322699932881ce5b02f45ecf8d3
 
 build:
-  noarch: generic
   merge_build_host: True  # [win]
-  number: 1001
+  number: 0
+  noarch: generic
   rpaths:
     - lib/R/lib/
     - lib/
@@ -36,7 +35,6 @@ requirements:
     - r-mvtnorm
     - r-prabclus
     - r-robustbase
-    - r-trimcluster
   run:
     - r-base
     - r-mass
@@ -49,7 +47,6 @@ requirements:
     - r-mvtnorm
     - r-prabclus
     - r-robustbase
-    - r-trimcluster
 
 test:
   commands:
@@ -57,13 +54,15 @@ test:
     - "\"%R%\" -e \"library('fpc')\""  # [win]
 
 about:
-  home: http://www.homepages.ucl.ac.uk/~ucakche/
+  home: https://www.unibo.it/sitoweb/christian.hennig/en/
   license: GPL
   summary: 'Various methods for clustering and cluster validation. Fixed point clustering. Linear
     regression clustering. Clustering by  merging Gaussian mixture components. Symmetric  and
     asymmetric discriminant projections for visualisation of the  separation of groupings.
     Cluster validation statistics for distance based clustering including corrected
-    Rand index.  Cluster-wise cluster stability assessment. Methods for estimation of  the
+    Rand index.  Standardisation of cluster validation statistics by random clusterings
+    and  comparison between many clustering methods and numbers of clusters based on
+    this.   Cluster-wise cluster stability assessment. Methods for estimation of  the
     number of clusters: Calinski-Harabasz, Tibshirani and Walther''s  prediction strength,
     Fang and Wang''s bootstrap stability.  Gaussian/multinomial mixture fitting for
     mixed  continuous/categorical variables. Variable-wise statistics for cluster interpretation.
@@ -71,12 +70,25 @@ about:
     in R, including estimating the number of clusters with kmeans, pam and clara. Modality
     diagnosis for Gaussian mixtures. For an overview see package?fpc.'
   license_family: GPL
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
 
 extra:
   recipe-maintainers:
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
-    - dbast
+    - conda-forge/r
+
+# Package: fpc
+# Title: Flexible Procedures for Clustering
+# Version: 2.2-2
+# Date: 2019-06-07
+# Author: Christian Hennig <christian.hennig@unibo.it>
+# Depends: R (>= 2.0)
+# Imports: MASS, cluster, mclust, flexmix, prabclus, class, diptest, mvtnorm, robustbase, kernlab, grDevices, graphics, methods, stats, utils, parallel
+# Suggests: tclust, pdfCluster, EMMIXskew
+# Description: Various methods for clustering and cluster validation. Fixed point clustering. Linear regression clustering. Clustering by  merging Gaussian mixture components. Symmetric  and asymmetric discriminant projections for visualisation of the  separation of groupings. Cluster validation statistics for distance based clustering including corrected Rand index.  Standardisation of cluster validation statistics by random clusterings and  comparison between many clustering methods and numbers of clusters based on this.   Cluster-wise cluster stability assessment. Methods for estimation of  the number of clusters: Calinski-Harabasz, Tibshirani and Walther's  prediction strength, Fang and Wang's bootstrap stability.  Gaussian/multinomial mixture fitting for mixed  continuous/categorical variables. Variable-wise statistics for cluster interpretation. DBSCAN clustering. Interface functions for many  clustering methods implemented in R, including estimating the number of clusters with kmeans, pam and clara. Modality diagnosis for Gaussian mixtures. For an overview see package?fpc.
+# Maintainer: Christian Hennig <christian.hennig@unibo.it>
+# License: GPL
+# URL: https://www.unibo.it/sitoweb/christian.hennig/en/
+# NeedsCompilation: no
+# Packaged: 2019-06-07 14:07:29 UTC; christian_hennig
+# Repository: CRAN
+# Date/Publication: 2019-06-07 19:00:30 UTC
