--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '2.2-2' %}
+{% set version = '2.2-3' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,7 +10,7 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/fpc_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/fpc/fpc_{{ version }}.tar.gz
-  sha256: b6907019eb161d5c8c814cf02a4663cc8aae6322699932881ce5b02f45ecf8d3
+  sha256: 8100a74e6ff96b1cd65fd22494f2d200e54ea5ea533cfca321fa494914bdc3b7
 
 build:
   merge_build_host: True  # [win]
@@ -32,7 +32,6 @@ requirements:
     - r-flexmix
     - r-kernlab
     - r-mclust
-    - r-mvtnorm
     - r-prabclus
     - r-robustbase
   run:
@@ -44,7 +43,6 @@ requirements:
     - r-flexmix
     - r-kernlab
     - r-mclust
-    - r-mvtnorm
     - r-prabclus
     - r-robustbase
 
@@ -78,17 +76,17 @@ extra:
 
 # Package: fpc
 # Title: Flexible Procedures for Clustering
-# Version: 2.2-2
-# Date: 2019-06-07
+# Version: 2.2-3
+# Date: 2019-06-28
 # Author: Christian Hennig <christian.hennig@unibo.it>
 # Depends: R (>= 2.0)
-# Imports: MASS, cluster, mclust, flexmix, prabclus, class, diptest, mvtnorm, robustbase, kernlab, grDevices, graphics, methods, stats, utils, parallel
-# Suggests: tclust, pdfCluster, EMMIXskew
+# Imports: MASS, cluster, mclust, flexmix, prabclus, class, diptest, robustbase, kernlab, grDevices, graphics, methods, stats, utils, parallel
+# Suggests: tclust, pdfCluster, EMMIXskew, mvtnorm
 # Description: Various methods for clustering and cluster validation. Fixed point clustering. Linear regression clustering. Clustering by  merging Gaussian mixture components. Symmetric  and asymmetric discriminant projections for visualisation of the  separation of groupings. Cluster validation statistics for distance based clustering including corrected Rand index.  Standardisation of cluster validation statistics by random clusterings and  comparison between many clustering methods and numbers of clusters based on this.   Cluster-wise cluster stability assessment. Methods for estimation of  the number of clusters: Calinski-Harabasz, Tibshirani and Walther's  prediction strength, Fang and Wang's bootstrap stability.  Gaussian/multinomial mixture fitting for mixed  continuous/categorical variables. Variable-wise statistics for cluster interpretation. DBSCAN clustering. Interface functions for many  clustering methods implemented in R, including estimating the number of clusters with kmeans, pam and clara. Modality diagnosis for Gaussian mixtures. For an overview see package?fpc.
 # Maintainer: Christian Hennig <christian.hennig@unibo.it>
 # License: GPL
 # URL: https://www.unibo.it/sitoweb/christian.hennig/en/
 # NeedsCompilation: no
-# Packaged: 2019-06-07 14:07:29 UTC; christian_hennig
+# Packaged: 2019-06-28 15:09:31 UTC; christian_hennig
 # Repository: CRAN
-# Date/Publication: 2019-06-07 19:00:30 UTC
+# Date/Publication: 2019-06-28 16:20:13 UTC
